# kitab

./: .hlint.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  cabal.project  cabal.project.freeze  cabal.release.project  cabal.static.project  fourmolu.yaml  hie.yaml  kitab.cabal
.github/workflows/: build.yaml  ci.yaml  fourmolu.yaml  lint.yaml  release.yaml
app/: Main.hs
doc/: ARCHITECTURE.md  INSTALL.md  MANUAL.md
doc/base/: MANUAL.md
examples/: Makefile  README.md
examples/property-filtering/: app-network-policy.yaml  in.kdl
kitab-prelude/: kitab-prelude.cabal
kitab-prelude/src/: Prelude.hs
src/c4/Render/: C4.hs
src/c4/Render/C4/: Types.hs
src/c4/Render/C4/C4Container/: Types.hs
src/c4/Render/C4/C4Entity/: Types.hs
src/c4/Render/C4/C4Service/: Types.hs
src/cilium/Render/: Cilium.hs
src/cilium/Render/Cilium/: Resolved.hs  Types.hs  Utils.hs
src/cilium/Render/Cilium/Types/: CIDRRule.hs  EgressRule.hs  NetworkPolicy.hs
src/cli/: CLI.hs
src/cli/CLI/: Error.hs  Types.hs
src/cli/CLI/Cmd/: Dump.hs  Generate.hs
src/cli/CLI/Filter/: Parser.hs
src/core/Core/: Filtering.hs  Graph.hs  Model.hs  Resolver.hs  Validation.hs  Variable.hs  VariableIndex.hs
src/core/Core/Filtering/: Types.hs
src/core/Core/Model/: CIDRSet.hs  ContextEntity.hs  ContextName.hs  Entity.hs  EntityName.hs  EntityReference.hs  FQDN.hs  Inventory.hs  InventoryVariable.hs  Port.hs  PortNode.hs  Reference.hs  Service.hs  ServiceContext.hs  ServiceName.hs  ServiceReference.hs  Variable.hs
src/core/Core/Model/Inventory/: Aggregated.hs  Selector.hs
src/driver/: Driver.hs
src/driver/Driver/: Cilium.hs  Colours.hs  Environment.hs  GEXF.hs  Inventory.hs  Output.hs  Parsing.hs  Puml.hs  Variable.hs  Verbosity.hs
src/gexf/Render/: GEXF.hs
src/gexf/Render/GEXF/: Types.hs
src/json-graph/Render/: JsonGraph.hs
src/json-graph/Render/JsonGraph/: Types.hs
src/parser/: Parser.hs
src/parser/Parser/: CIDRSet.hs  ContextEntity.hs  Entity.hs  EntityName.hs  Inventory.hs  PortNode.hs  Service.hs  ServiceContext.hs  ServiceName.hs  Types.hs  Util.hs  Utils.hs  V1.hs  Variable.hs
src/parser/Parser/Service/: FQDN.hs
src/parser/Parser/V1/: CIDRSet.hs  Entity.hs  EntityName.hs  Inventory.hs  PortNode.hs  Service.hs  ServiceContext.hs  ServiceName.hs  Types.hs  Var.hs
src/puml/Render/: Puml.hs
src/puml/Render/Puml/: PumlType.hs
src/puml/Render/Puml/C4Container/: Types.hs
src/puml/Render/Puml/C4Entity/: Types.hs
test/: Main.hs
test/Test/: CLITests.hs  InventoryTests.hs  ModelTests.hs  ParserTests.hs  Utils.hs
test/Test/CLI/: DumpTests.hs
test/Test/Driver/: CiliumTests.hs  VariableTests.hs
test/Test/Render/: C4Tests.hs  CiliumTests.hs  GEXFTests.hs  PumlTests.hs
test/fixtures/: cidrset-in-context.kdl  cidrset.kdl  connect-only.kdl  env-specific-values.kdl  host-entity.kdl  invalid-service-prop-key.kdl  invalid-service-prop-value.kdl  inventory.kdl  media-proxy.kdl  missing-via.kdl  multiple-service-definitions-with-vars.kdl  multiple-service-definitions.kdl  nested-contexts-puml.kdl  puml-type.kdl  service-definition.kdl  service-with-var.kdl  unknown-connection-type.kdl  web-app-to-backend.kdl
test/fixtures/inventory/aws/: inventory.kdl
test/fixtures/inventory/aws/dev/: inventory.kdl
test/fixtures/inventory/aws/prod/: inventory.kdl
test/fixtures/inventory/aws/staging/: inventory.kdl
test/fixtures/services/: cidrset.kdl  multiple-service-definitions.kdl
test/fixtures/variables/: empty-values-variable.kdl  variable-declaration.kdl  variable-without-validation.kdl
test/golden/: cidr-network-policy.yaml  cidrset-in-context.puml  connect-only.gexf  connect-only.puml  dumped-service-definition.hs  multiple-definitions.dot  nested-contexts.puml  network-policy.yaml  parsed-multiple-services.hs  puml-type.puml  service.puml  services.gexf  web-app-to-backend.puml
