cabal-version: 3.4
name: kitab
version: 0.1.0.0
synopsis: Documentation for service-oriented architectures
license: BSD-3-Clause
license-file: LICENSE
author: Théophile Choutri de Tarlé
maintainer: theophile.choutri@scrive.com
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:
  ghc ==9.6.7 || ==9.10.3 || ==9.12.2

source-repository head
  type: git
  location: https://github.com/scrive/kitab

common extensions
  default-extensions:
    DerivingVia
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ScopedTypeVariables

  default-language: GHC2024

common ghc-options
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -Wno-unused-do-bind
    -funbox-strict-fields
    -Wunused-packages
    -Wno-unticked-promoted-constructors
    -funbox-small-strict-fields
    -Winvalid-haddock

common rts-options
  ghc-options:
    -rtsopts
    -threaded
    -with-rtsopts=-N

library
  import: extensions
  import: ghc-options
  autogen-modules:
    Paths_kitab

  other-modules:
    Paths_kitab

  -- cabal-gild: discover src/driver src/parser src/cli
  exposed-modules:
    CLI
    CLI.Error
    CLI.Types
    Driver
    Parser
    Parser.Service
    Parser.ServiceContext
    Parser.Types

  build-depends:
    algebraic-graphs,
    base ^>=4.21,
    bytestring,
    deepseq,
    effectful,
    filepath,
    gitrev,
    kdl-hs,
    kitab:kitab-c4,
    kitab:kitab-cilium,
    kitab:kitab-core,
    kitab-prelude,
    optics-core,
    optparse-applicative,
    text,
    validation-selective,

  hs-source-dirs:
    src/driver
    src/parser
    src/cli

  mixins:
    base hiding (Prelude),
    kitab-prelude (Prelude),

library kitab-core
  import: extensions
  import: ghc-options
  -- cabal-gild: discover src/core
  exposed-modules:
    Core.Graph
    Core.Model.CIDRSet
    Core.Model.Service
    Core.Model.ServiceContext
    Core.Validation

  build-depends:
    algebraic-graphs,
    base ^>=4.21,
    containers,
    kitab-prelude,
    prettyprinter,
    text,
    text-display,
    validation-selective,

  hs-source-dirs: src/core
  mixins:
    base hiding (Prelude),
    kitab-prelude (Prelude),

library kitab-c4
  import: extensions
  import: ghc-options
  -- cabal-gild: discover src/c4
  exposed-modules:
    Render.C4
    Render.C4.Types

  build-depends:
    algebraic-graphs,
    base ^>=4.21,
    containers,
    kitab:kitab-core,
    kitab-prelude,
    optics-core,
    prettyprinter,
    text,

  hs-source-dirs: src/c4
  mixins:
    base hiding (Prelude),
    kitab-prelude (Prelude),

library kitab-cilium
  import: extensions
  import: ghc-options
  -- cabal-gild: discover src/cilium
  exposed-modules:
    Render.Cilium
    Render.Cilium.Types

  build-depends:
    algebraic-graphs,
    base ^>=4.21,
    containers,
    kitab:kitab-core,
    kitab-prelude,
    prettyprinter,
    text,
    text-display,

  hs-source-dirs: src/cilium
  mixins:
    base hiding (Prelude),
    kitab-prelude (Prelude),

executable kitab
  import: extensions
  import: ghc-options
  import: rts-options
  main-is: Main.hs
  build-depends:
    base ^>=4.21,
    effectful,
    effectful-core,
    kitab,
    kitab-prelude,
    optparse-applicative,
    text,

  hs-source-dirs: app
  mixins:
    base hiding (Prelude),
    kitab-prelude (Prelude),

test-suite kitab-test
  import: extensions
  import: ghc-options
  import: rts-options
  default-language: GHC2024
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  -- cabal-gild: discover test --exclude "test/Main.hs"
  other-modules:
    Test.ModelTests
    Test.ParserTests
    Test.Render.C4Tests
    Test.Render.CiliumTests
    Test.Utils

  build-depends:
    algebraic-graphs,
    base ^>=4.21,
    bytestring,
    containers,
    effectful,
    effectful-core,
    kdl-hs,
    kitab,
    kitab:kitab-c4,
    kitab:kitab-cilium,
    kitab:kitab-core,
    kitab-prelude,
    tasty,
    tasty-golden,
    tasty-hunit,
    text,
    validation-selective,

  mixins:
    base hiding (Prelude),
    kitab-prelude (Prelude),
