cabal-version: 3.4
name: kitab
version: 0.1.0.0
synopsis: Documentation for service-oriented architectures
license: BSD-3-Clause
license-file: LICENSE
author: Théophile Choutri de Tarlé
maintainer: theophile.choutri@scrive.com
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:
  ghc ==9.6.7 || ==9.10.3 || ==9.12.2

source-repository head
  type: git
  location: https://github.com/scrive/kitab

common extensions
  default-extensions:
    DerivingVia
    NoFieldSelectors
    NoListTuplePuns
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ScopedTypeVariables

  default-language: GHC2024

common ghc-options
  ghc-options:
    -- -Wunused-packages -- Commented out because base and kitab-prelude get improperly flagged
    -Wall
    -Wcompat
    -Widentities
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -Wno-unused-do-bind
    -funbox-strict-fields
    -Wno-unticked-promoted-constructors
    -funbox-small-strict-fields
    -Winvalid-haddock
    -Wmissing-deriving-strategies
    -Werror=default
    -Wwarn=x-partial
    -Wwarn=inconsistent-flags

common rts-options
  ghc-options:
    -rtsopts
    -threaded
    -with-rtsopts=-N

library
  import: extensions
  import: ghc-options
  autogen-modules:
    Paths_kitab

  other-modules:
    Paths_kitab

  -- cabal-gild: discover src/driver src/parser src/cli
  exposed-modules:
    CLI
    CLI.Cmd.Dump
    CLI.Cmd.Generate
    CLI.Error
    CLI.Types
    Driver.Cilium
    Driver.Colours
    Driver.Environment
    Driver.GEXF
    Driver.Inventory
    Driver.Output
    Driver.Parsing
    Driver.Puml
    Driver.Variable
    Driver.Verbosity
    Parser
    Parser.Util
    Parser.V1
    Parser.V1.CIDRSet
    Parser.V1.Entity
    Parser.V1.EntityName
    Parser.V1.Inventory
    Parser.V1.PortNode
    Parser.V1.Service
    Parser.V1.ServiceContext
    Parser.V1.ServiceName
    Parser.V1.Types
    Parser.V1.Var

  build-depends:
    algebraic-graphs,
    base ^>=4.21,
    bytestring,
    containers,
    deepseq,
    effectful,
    envparse,
    filepath,
    gitrev,
    kdl-hs,
    kitab:kitab-cilium,
    kitab:kitab-core,
    kitab:kitab-gexf,
    kitab:kitab-puml,
    kitab-prelude,
    layoutz,
    optics-core,
    optparse-applicative,
    pretty-simple,
    text,
    validation-selective,

  hs-source-dirs:
    src/driver
    src/parser
    src/cli

  mixins:
    base hiding (Prelude),
    kitab-prelude (Prelude),

library kitab-core
  import: extensions
  import: ghc-options
  -- cabal-gild: discover src/core
  exposed-modules:
    Core.Graph
    Core.Model.CIDRSet
    Core.Model.ContextName
    Core.Model.Entity
    Core.Model.EntityName
    Core.Model.Inventory
    Core.Model.Inventory.Aggregated
    Core.Model.Inventory.Selector
    Core.Model.InventoryVariable
    Core.Model.PortNode
    Core.Model.Reference
    Core.Model.Service
    Core.Model.ServiceContext
    Core.Model.ServiceName
    Core.Validation
    Core.Variable

  build-depends:
    algebraic-graphs,
    base ^>=4.21,
    containers,
    deepseq,
    kitab-prelude,
    prettyprinter,
    validation-selective,

  hs-source-dirs:
    src/core

  mixins:
    base hiding (Prelude),
    kitab-prelude (Prelude),

library kitab-puml
  import: extensions
  import: ghc-options
  autogen-modules:
    Paths_kitab

  other-modules:
    Paths_kitab

  -- cabal-gild: discover src/puml
  exposed-modules:
    Render.Puml
    Render.Puml.C4Container.Types
    Render.Puml.PumlType

  build-depends:
    algebraic-graphs,
    base ^>=4.21,
    containers,
    effectful-core,
    extra,
    kitab:kitab-core,
    kitab-prelude,
    optics-core,
    prettyprinter,
    text,

  hs-source-dirs: src/puml
  mixins:
    base hiding (Prelude),
    kitab-prelude (Prelude),

library kitab-cilium
  import: extensions
  import: ghc-options
  autogen-modules:
    Paths_kitab

  other-modules:
    Paths_kitab

  -- cabal-gild: discover src/cilium
  exposed-modules:
    Render.Cilium
    Render.Cilium.Resolved
    Render.Cilium.Types
    Render.Cilium.Types.CIDRRule
    Render.Cilium.Types.EgressRule
    Render.Cilium.Types.NetworkPolicy
    Render.Cilium.Utils

  build-depends:
    base ^>=4.21,
    containers,
    kitab:kitab-core,
    kitab-prelude,
    prettyprinter,
    validation-selective,

  hs-source-dirs: src/cilium
  mixins:
    base hiding (Prelude),
    kitab-prelude (Prelude),

library kitab-gexf
  import: extensions
  import: ghc-options
  autogen-modules:
    Paths_kitab

  other-modules:
    Paths_kitab

  -- cabal-gild: discover src/gexf
  exposed-modules:
    Render.GEXF
    Render.GEXF.Types

  build-depends:
    algebraic-graphs,
    base ^>=4.21,
    containers,
    kitab:kitab-core,
    kitab-prelude,
    optics-core,
    text,
    xml-conduit,
    xml-conduit-writer,

  hs-source-dirs: src/gexf
  mixins:
    base hiding (Prelude),
    kitab-prelude (Prelude),

executable kitab
  import: extensions
  import: ghc-options
  import: rts-options
  main-is: Main.hs
  build-depends:
    base ^>=4.21,
    effectful,
    effectful-core,
    kitab,
    kitab-prelude,
    optparse-applicative,
    text,

  hs-source-dirs: app
  mixins:
    base hiding (Prelude),
    kitab-prelude (Prelude),

test-suite kitab-test
  import: extensions
  import: ghc-options
  import: rts-options
  default-language: GHC2024
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  -- cabal-gild: discover test --exclude "test/Main.hs"
  other-modules:
    Test.CLI.DumpTests
    Test.InventoryTests
    Test.ModelTests
    Test.ParserTests
    Test.Render.CiliumTests
    Test.Render.GEXFTests
    Test.Render.PumlTests
    Test.Utils

  build-depends:
    algebraic-graphs,
    base ^>=4.21,
    bytestring,
    containers,
    effectful,
    effectful-core,
    filepath,
    kdl-hs,
    kitab,
    kitab:kitab-cilium,
    kitab:kitab-core,
    kitab:kitab-gexf,
    kitab:kitab-puml,
    kitab-prelude,
    optics-core,
    pretty-simple ^>=4.1.4.0,
    prettyprinter,
    tasty,
    tasty-golden,
    tasty-hunit,
    text,
    validation-selective,

  mixins:
    base hiding (Prelude),
    kitab-prelude (Prelude),
