cabal-version: 3.4
name: kitab-prelude
version: 0.1.0.0
synopsis: Custom prelude for the kitab project
license: BSD-3-Clause
license-file: ../LICENSE
author: Théophile Choutri de Tarlé
maintainer: theophile.choutri@scrive.com
build-type: Simple
extra-doc-files: ../CHANGELOG.md

tested-with:
  ghc ==9.6.7 || ==9.10.3 || ==9.12.2

source-repository head
  type: git
  location: https://github.com/scrive/kitab
  subdir: kitab-prelude

common extensions
  default-extensions:
    OverloadedRecordDot
    OverloadedStrings

  default-language: GHC2024

common ghc-options
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -Wno-unused-do-bind
    -funbox-strict-fields
    -Wunused-packages
    -Wno-unticked-promoted-constructors
    -funbox-small-strict-fields
    -Winvalid-haddock

library
  import: extensions
  import: ghc-options
  exposed-modules: Prelude
  hs-source-dirs: src
  build-depends:
    base,
    extra,
    text,
    text-display,
    vector,
